[metadata]
name = mayaqt_generator
description = mayaqt_generator
author = Tack2
author_email = takumi236@gmail.com

[options]
packages = find:
package_dir = = src
include_package_data = true

[aliases]
test=pytest

[options.packages.find]
where = src

[tool:pytest]
testpaths = ./tests
python_files = test_*.py
python_classes = Test
python_functions = test_