[metadata]
name = boip
description = BoilerPlateCreater.
author = Tack2
author_email = takumi236@gmail.com
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Operating System :: Microsoft :: Windows :: Windows 10
    Natural Language :: Japanese

[options]
zip_safe = False
packages = find:
package_dir = = src
include_package_data = true
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    pyyaml==5.3.1
    PyInquirer==1.0.3
tests_require =
    pytest

[options.package_data]
* = *.txt, *.ui, *.md

[options.packages.find]
where = src

[aliases]
test=pytest

[tool:pytest]
testpaths = ./tests
python_files = test_*.py
python_classes = Test
python_functions = test_